--- a/src/components/testimonials/testimonials.css
+++ b/src/components/testimonials/testimonials.css
@@ -7,12 +7,20 @@
 }
 
 .client__avatar {
-  width: 100%;
+  width: 40%;
   aspect-ratio: 1/1;
   overflow: hidden;
+  position: relative;
 
   margin: 0 auto 1rem;
   border: 0.4rem solid var(--color-primary-variant);
+  margin-right: 2rem;
+}
+
+.client__avatar img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
 }
 
 .testimonial {
@@ -24,11 +32,16 @@
 }
 
 .client__review {
-  color: var(--color-light);
-  font-weight: 300;
-  display: block;
-  width: 80%;
-  margin: 0.8rem auto 0;
+    /* existing styles */
+    width: 80%; /* adjust as needed */
+    text-align: justify;
+    margin: auto;
+    line-height: 1.5; /* adjust as needed for line spacing */
+    word-wrap: break-word; /* to prevent overflow of long words */
+    display: -webkit-box;
+    -webkit-line-clamp: N; /* 'N' is the number of lines you want to display */
+    -webkit-box-orient: vertical; 
+    overflow: hidden; /* This will make the text cut-off at the nth line */
 }
 
 .swiper-pagination-clickable .swiper-pagination-bullet {
